[package]
name = "tequila-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
syn = { version = "2.0.18", features = ["derive", "full"] }
url = "2.4.0"
proc-macro2 = "1.0.60"
