[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
tequila = { path = "../.." }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.4.0"
